Descripción de los cambios realizados

--- a/api/templates/estudiantes/list.html
+++ b/api/templates/estudiantes/list.html
@@ -9,7 +9,7 @@
         .success-message { color: green; }
     </style>
     <script>
-        const token = "REEMPLAZA_TU_TOKEN"; // Reemplaza con tu token
+        const token = "568e73fa4e69f6b09bc5fabe542a8311faac79de"; // Reemplaza con tu token
         const endpointEstudiantes = "http://127.0.0.1:8000/api/estudiantes/";
         const endpointClases = "http://127.0.0.1:8000/api/clases/";
 
