--- a/templates/estudiantes/list.html
+++ b/templates/estudiantes/list.html
@@ -108,12 +108,12 @@
     <h1>Inscripción de Estudiantes</h1>
     <div id="mensaje"></div>
 
-    <!-- Lista de Estudiantes -->
+        <h1>Lista de estudiantes:</h1>
     <ul id="lista-estudiantes">
-        <!-- Los estudiantes se cargarán aquí dinámicamente -->
+
     </ul>
 
-    <!-- Formulario de Inscripción -->
+    
     <div id="form-inscripcion" style="display:none;">
         <h2>Inscribir Estudiante en Clase</h2>
         <select id="clase-id"></select>
@@ -121,4 +121,5 @@
         <button onclick="inscribirEnClase()">Inscribir</button>
     </div>
 </body>
+<br><a href="{% url 'menu' %}">ATRAS</a>
 </html>
