--- a/templates/menu.html
+++ b/templates/menu.html
@@ -11,7 +11,9 @@
         <li><a href="{% url 'clases' %}">CRUD de Clases</a></li>
         <li><a href="{% url 'estudiantes' %}">CRUD de Estudiantes</a></li>
         <li><a href="{% url 'profesores' %}">CRUD de Profesores</a></li>
-        <li><a href="{% url 'logout' %}">Cerrar Sesión</a></li>
+        <br><br><br>
+        <br><br><br>
+        <li><a href="{% url 'login' %}">Cerrar Sesión</a></li>
     </ul>
 </body>
 </html>
