--- a/templates/profesores/list.html
+++ b/templates/profesores/list.html
@@ -170,10 +170,11 @@
         <button type="submit" id="btn-guardar">Guardar</button>
     </form>
 
-    <!-- Lista de Profesores -->
+   
     <h2>Lista de Profesores</h2>
     <ul id="lista-profesores">
         <!-- Los profesores se cargarán aquí dinámicamente -->
     </ul>
 </body>
+<br><a href="{% url 'menu' %}">ATRAS</a>
 </html>
